<resources>
    <string name="app_name">DevStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="underline_text"><u>English</u></string>


    <string name="about_us">
        Welcome to DevStore, your one-stop shop for top-quality coding projects across various categories! Whether you\'re looking to enhance your skills or need ready-made solutions for your development needs, we have something for everyone.
        \n\nAt DevStore, we specialize in offering a diverse range of coding projects, including:
        \n\n• Mobile Apps: Find innovative and user-friendly mobile applications for both Android and iOS platforms.
        \n• Desktop Apps: Discover powerful and efficient desktop applications for various operating systems.
        \n• Front-end Development: Explore beautifully designed and responsive front-end projects that ensure an excellent user experience.
        \n• Back-end Development: Get robust and scalable back-end solutions that power your applications with efficiency.
        \n• Artificial Intelligence: Dive into the future with AI projects that showcase the cutting edge of technology and machine learning.
        \n\nOur mission is to provide developers with high-quality, ready-to-use projects that can accelerate their learning and development process. Whether you\'re a beginner looking for educational resources or an experienced developer in need of sophisticated project templates, DevStore has you covered.
        \n\nJoin our community today and take your coding journey to the next level with DevStore!
    </string>

    <string name="terms_and_conditions">
    Welcome to DevStore! Please read these terms and conditions carefully before using our services. By accessing or using our platform, you agree to be bound by the following terms:

    \n\n1. Acceptance of Terms: By using DevStore, you acknowledge that you have read, understood, and agree to be bound by these terms and conditions. If you do not agree to these terms, you may not use our services.

    \n\n2. Use of Services: You agree to use DevStore only for lawful purposes and in accordance with these terms. You are responsible for your own conduct and compliance with all applicable laws and regulations.

    \n\n3. Account Registration: To access certain features of DevStore, you may be required to create an account. You agree to provide accurate and complete information and to keep your account information updated.

    \n\n4. Intellectual Property: All content and materials available on DevStore, including but not limited to text, graphics, logos, and software, are the property of DevStore or its licensors and are protected by intellectual property laws.

    \n\n5. User Content: You retain ownership of any content you submit to DevStore. By submitting content, you grant DevStore a non-exclusive, worldwide, royalty-free license to use, reproduce, modify, and distribute your content in connection with our services.

    \n\n6. Prohibited Activities: You agree not to engage in any activity that may harm DevStore or its users, including but not limited to distributing malware, engaging in spamming, or attempting to gain unauthorized access to our systems.

    \n\n7. Termination: DevStore reserves the right to terminate or suspend your account and access to our services at any time, without notice, for conduct that we believe violates these terms or is otherwise harmful to DevStore or its users.

    \n\n8. Limitation of Liability: DevStore is not liable for any indirect, incidental, special, consequential, or punitive damages arising out of or related to your use of our services.

    \n\n9. Changes to Terms: DevStore reserves the right to modify these terms at any time. We will notify you of any changes by posting the new terms on our platform. Your continued use of DevStore after any changes constitutes your acceptance of the new terms.

    \n\n10. Governing Law: These terms and conditions are governed by and construed in accordance with the laws of the jurisdiction in which DevStore operates.

    \n\nThank you for using DevStore. If you have any questions or concerns about these terms, please contact us at support@devstore.com.
</string>


    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="login">Login</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email_is_required">Email is required</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="password_is_required">Password is required</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="we_accept">We Accept</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date_mm_yy">Expiry Date (MM/YY)</string>
    <string name="cvv">CVV</string>
    <string name="pay_now">Pay Now</string>
    <string name="error_message_will_be_displayed_here">Error message will be displayed here</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_review">Add review</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="submit">Submit</string>
    <string name="reviews">Reviews</string>
    <string name="total_price">Total Price: $</string>
    <string name="download">Download</string>
    <string name="language">Language</string>
    <string name="manage_projects">Manage Projects</string>
    <string name="about_us_profile">About us</string>
    <string name="log_out">Log Out</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="username_is_required">Username is required</string>
    <string name="your_email">Your Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="search">Search</string>
    <string name="forgot_password">Forgot Password?</string>


    <string-array name="filter_options">
        <item>Name</item>
        <item>Price</item>
    </string-array>
</resources>