<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.frags.RegisterFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress_bar_register"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/ic_loading_animation" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/register_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/iv_dev_store_logo"
                />


            <com.google.android.material.textview.MaterialTextView
                style="@style/DarkBlueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="16dp"
                android:text="@string/register"
                android:textSize="30sp" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/GreyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/create_a_new_account" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/DarkBlueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:text="@string/username"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_reg_username"
                style="@style/CustomEditText"
                android:layout_marginTop="10dp"
                android:autofillHints="name"
                android:hint="@string/full_name"
                android:inputType="textPersonName|textCapWords" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />


            <TextView
                android:id="@+id/tv_reg_username_error"
                style="@style/ErrorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/username_is_required"
                android:visibility="gone" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/DarkBlueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_reg_email"
                style="@style/CustomEditText"
                android:layout_marginTop="8dp"
                android:autofillHints="emailAddress"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tv_reg_email_error"
                style="@style/ErrorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/email_is_required"
                android:visibility="gone" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/DarkBlueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_reg_password"
                style="@style/CustomEditText"
                android:layout_marginTop="8dp"
                android:autofillHints="password"
                android:drawableEnd="@drawable/ic_eye_off"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_reg_password_error"
                style="@style/ErrorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/password_is_required"
                android:visibility="gone" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/DarkBlueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:text="@string/confirm_password"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_reg_confirm_password"
                style="@style/CustomEditText"
                android:layout_marginTop="8dp"
                android:autofillHints="password"
                android:drawableEnd="@drawable/ic_eye_off"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_reg_confirm_password_error"
                style="@style/ErrorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:text="@string/register" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/GreyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textAlignment="textEnd" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_reg_sign_in"
                    style="@style/OrangeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/sign_in" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
